--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -14,7 +14,7 @@ header {
 }
 
 .logo {
-    margin-left: 100px; /* Adjust margin for positioning */
+    margin-left: 100px;
 }
 
 .logo img {
@@ -35,7 +35,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 100px; /* Adjust spacing between menu items */
+    margin-right: 100px;
 }
 
 nav ul li a {
@@ -53,4 +53,108 @@ nav ul li.active a {
 nav ul li a:hover {
     background-color: darkslategrey;
     color: white;
+}
+
+/* Hero Section */
+
+.hero {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+#heroVideo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+    background-size: cover;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 1;
+    color: white;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 20px;
+    opacity: 0;
+    animation: fadeInUp 1.5s ease-out forwards, zoomIn 1.5s ease-out forwards;
+}
+
+.hero h1 {
+    font-size: 3em;
+    margin: 0.5em 0;
+    animation: slideIn 1.5s ease-out forwards;
+}
+
+.hero p {
+    font-size: 1.5em;
+    animation: fadeInUp 2s ease-out forwards 1s; /* Delay for staggered effect */
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(-50%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .logo {
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+
+    .hero h1 {
+        font-size: 2em;
+    }
+
+    .hero p {
+        font-size: 1em;
+    }
 }
