feat: added a gallery section wherein it displays a screenshot of the past projects, title, short description, and the deployment link, updated the css styling, added 1,2,3,4,5,6,7,HeaderLogo pngs, updated index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ nav ul li a:hover {
 
 .hero p {
     font-size: 1.5em;
-    animation: fadeInUp 2s ease-out forwards 1s; /* Delay for staggered effect */
+    animation: fadeInUp 2s ease-out forwards 1s;
 }
 
 @keyframes fadeInUp {
