fix: fixed bg image path file

--- a/pages/Contact/assets/css/style.css
+++ b/pages/Contact/assets/css/style.css
@@ -49,7 +49,7 @@ header {
 }
 
 body {
-    background-image: url('../img/bg.jpg');
+    background-image: url('/pages/Contact/assets/img/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
