--- a/pages/Contact/assets/css/style.css
+++ b/pages/Contact/assets/css/style.css
@@ -49,7 +49,7 @@ header {
 }
 
 body {
-    background-image: url('../../assets/img/bg.jpg');
+    background-image: url('../../../Contact/assets/img/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
